<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/photo_desc"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="@dimen/item_description_width"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        android:text="@string/ad_name"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        tools:text="Product Name"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="@dimen/item_description_width"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:text="@string/ad_description"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descriptionText"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="Product Description"/>

    <TextView
        android:id="@+id/numberOfRatingsText"
        android:layout_width="@dimen/item_description_width"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:text="@string/ad_ratings_count"/>

    <TextView
        android:id="@+id/numberOfRatings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberOfRatingsText"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:text="Number of Downloads"/>

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="@dimen/item_description_width"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfRatings"
        android:text="@string/ad_rating"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ratingText"
        app:layout_constraintTop_toBottomOf="@+id/numberOfRatings"
        tools:text="Rating"/>

    <TextView
        android:id="@+id/category_name_text"
        android:layout_width="@dimen/item_description_width"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        android:text="@string/ad_category_name"/>

    <TextView
        android:id="@+id/category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Description"
        android:paddingTop="@dimen/row_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/category_name_text"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        tools:text="Category Name"/>

</androidx.constraintlayout.widget.ConstraintLayout>
